--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "the-elder-cards-back",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "dependencies": {
-    "axios": "^1.11.0",
-    "bcrypt": "^5.1.1",
-    "canvas": "^3.2.0",
-    "cloudinary": "^1.41.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.1",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "sharp": "^0.34.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
-  }
+    "name": "the-elder-cards-back",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js"
+    },
+    "dependencies": {
+        "@napi-rs/canvas": "^0.1.80",
+        "axios": "^1.11.0",
+        "bcrypt": "^5.1.1",
+        "cloudinary": "^1.41.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.8.1",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
+        "sharp": "^0.34.3"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.7"
+    }
 }
