Add Vercel API entry point and health routes
Created api/index.js for Vercel deployment, updated vercel.json to use the new entry point, and added root and health check routes to index.js. Improved CORS configuration and server startup logic for better compatibility with serverless environments.

--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,15 @@
 {
   "version": 2,
-  "functions": {
-    "index.js": {
-      "maxDuration": 30
-    }
-  },
-  "rewrites": [
+  "builds": [
     {
-      "source": "/api/v1/(.*)",
-      "destination": "/index.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.js"
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
   ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
+    }
+  ]
 }
