--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
-  "version": 2,
   "functions": {
-    "vercel-handler.js": {
+    "api/*.js": {
       "maxDuration": 30
     }
   },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/vercel-handler.js"
+      "destination": "/api/index"
     }
   ]
 }
