Revert "Refactor Vercel handler to API route"
This reverts commit 3a33e2d7da7d0d5cfeef0b2b9002b10626480a83.

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,14 @@
 {
+  "version": 2,
   "functions": {
-    "api/*.js": {
+    "vercel-handler.js": {
       "maxDuration": 30
     }
   },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/api/index"
+      "destination": "/vercel-handler.js"
     }
   ]
 }
