Revert "Add Vercel API entry point and health routes"
This reverts commit ab579c499d71dac1829838912f233be16220a120.

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,21 @@
 {
   "version": 2,
-  "builds": [
+  "functions": {
+    "index.js": {
+      "maxDuration": 30
+    }
+  },
+  "rewrites": [
     {
-      "src": "api/index.js",
-      "use": "@vercel/node"
+      "source": "/api/v1/(.*)",
+      "destination": "/index.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.js"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.js"
-    }
-  ]
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
