Revert "Update server export and Vercel config for deployment"
This reverts commit 1a7d9534e812b3c3f4a95b544e5a0eea98a54fe8.

--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,27 @@
 {
   "version": 2,
-  "functions": {
-    "index.js": {
-      "maxDuration": 30
-    }
-  },
-  "rewrites": [
+  "builds": [
     {
-      "source": "/api/v1/(.*)",
-      "destination": "/index.js"
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/v1/(.*)",
+      "dest": "/index.js"
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.js"
+      "src": "/(.*)",
+      "dest": "/index.js"
     }
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "index.js": {
+      "maxDuration": 30
+    }
   }
 }
