--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "mongoose": "^8.8.1",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
-        "sharp": "^0.34.3"
+        "sharp": "^0.34.3",
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.7"
