Add Socket.IO API endpoint and Vercel config
Introduces a new API route for Socket.IO at api/socket.js with authentication and notification logic. Updates Vercel configuration to support the new endpoint, set function durations, and route socket.io traffic. Also adds polling and EIO3 support to socket config.

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,34 @@
 {
+  "functions": {
+    "index.js": {
+      "maxDuration": 10
+    },
+    "api/socket.js": {
+      "maxDuration": 30
+    }
+  },
   "builds": [
     {
       "src": "./index.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "./api/socket.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/api/socket.io/(.*)",
+      "dest": "/api/socket.js"
+    },
+    {
+      "src": "/socket.io/(.*)",
+      "dest": "/api/socket.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/index.js"
     }
   ]
 }
